// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync jitteredRetry should return all data 1`] = `
Object {
  "data": Object {
    "syncPosts": Object {
      "items": Array [
        Object {
          "id": "1",
          "title": "Item 1",
        },
        Object {
          "id": "2",
          "title": "Item 2",
        },
      ],
    },
  },
}
`;

exports[`Sync jitteredRetry should return partial data and send Hub event when datastorePartialData is set 1`] = `
Object {
  "data": Object {
    "syncPosts": Object {
      "items": Array [
        Object {
          "id": "1",
          "title": "Item 1",
        },
        Object {
          "id": "3",
          "title": "Item 3",
        },
      ],
    },
  },
  "errors": Array [
    Object {
      "message": "Item 2 error",
    },
  ],
}
`;

exports[`Sync jitteredRetry should throw error and NOT return data or send Hub event when datastorePartialData is not set 1`] = `
Object {
  "data": Object {
    "syncPosts": Object {
      "items": Array [
        Object {
          "id": "1",
          "title": "Item 1",
        },
        null,
        Object {
          "id": "3",
          "title": "Item 3",
        },
      ],
    },
  },
  "errors": Array [
    Object {
      "message": "Item 2 error",
    },
  ],
}
`;

exports[`Sync jitteredRetry should throw error if no data is returned 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "message": "General error",
    },
  ],
}
`;
